--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 
 	//JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	// Spring web
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
@@ -36,7 +36,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 
 	// Openapi swagger
-	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.4'
 	// Envers
 	implementation 'org.hibernate.orm:hibernate-envers:6.4.4.Final'
 	// Spring Boot Starter Validation
